update: documentaton of the video endpoint
