# docs/swagger.yaml
@@ -11,6 +11,19 @@ definitions:
       username:
         type: string
     type: object
+  models.Video:
+    properties:
+      description:
+        type: string
+      id:
+        type: string
+      path:
+        type: string
+      title:
+        type: string
+      video:
+        type: string
+    type: object
 host: localhost:3003
 info:
   contact: {}
@@ -78,4 +91,72 @@ paths:
       summary: Get user by ID
       tags:
       - users
+  /videos/:
+    get:
+      description: Upload a video file along with metadata (title and description)
+        and save it to the server.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Video'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Save a video
+      tags:
+      - videos
+    post:
+      consumes:
+      - multipart/form-data
+      description: Upload a video file along with metadata (title and description)
+        and save it to the server.
+      parameters:
+      - description: Video Title
+        in: formData
+        name: title
+        required: true
+        type: string
+      - description: Video Description
+        in: formData
+        name: description
+        type: string
+      - description: Video File
+        in: formData
+        name: video
+        required: true
+        type: file
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Video'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Save a video
+      tags:
+      - videos
 swagger: "2.0"
